--- a/google.html
+++ b/google.html
@@ -33,6 +33,7 @@
             <input type="submit" value="J'ai de la chance" onclick="msg()">
         </form>    
        </div>
+       <p>Google disponible en : <a href="#">English</a> </p>
          <!-- ne pas oublier de mettre les pointeur  -->
         <!--  au chargement ca va direct sur reccherche -->        
 
